# modern-cpp-course-homework

./: LICENSE  README.md
homework_1/task_1/: commands.sh
homework_1/task_2/: CMakeLists.txt  build.sh  install.sh
homework_1/task_2/src/: CMakeLists.txt
homework_2/: CMakeLists.txt
homework_2/src/: CMakeLists.txt
homework_2/src/task_1/: CMakeLists.txt  main.cpp
homework_2/src/task_2/: CMakeLists.txt  main.cpp
